--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         </div>
         <div id="textarea-container">
           <div id="syntax" readonly></div>
-          <textarea id="editor">if x is a cat then x is a mammal
+          <textarea id="editor">if x is y then y is x
+if x is y and y is z then x is z
+if x is a cat then x is a mammal
 if not x is a mammal then not x is a cat
 x is a cat and not x is a mammal
 if x is a mammal then x is a cat
