Updated documentation and default text

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         </div>
         <div id="textarea-container">
           <div id="syntax" readonly></div>
-          <textarea id="editor"># "is" is an equivalence relation
-x is x # Reflexive
-if x is y then y is x # Symmetric
-if x is y and y is z then x is z # Transitive
+          <textarea id="editor">
+x is x                            # Reflexive
+if x is y then y is x             # Symmetric
+if x is y and y is z then x is z  # Transitive
 
 if x is a cat then x is a mammal
 if not x is a mammal then not x is a cat
