--- a/index.html
+++ b/index.html
@@ -33,14 +33,8 @@
         <div id="textarea-container">
           <div id="syntax" readonly></div>
           <textarea id="editor">
-x is x                            # Reflexive
-if x is y then y is x             # Symmetric
-if x is y and y is z then x is z  # Transitive
-
-if x is a cat then x is a mammal
-if not x is a mammal then not x is a cat
-x is a cat and not x is a mammal
-if x is a mammal then x is a cat
+# not              
+            
 </textarea>
         </div>
       </div>
